Version 8.9.2
=============

Bug fixes:
- Fixed GDI resource leak in CFont::CreatePointFontIndirect.

New Features and Enhancements
-----------------------------
* The values for WINVER and related macros now default to Windows 10.
  Different values can be specified before including wincore.h if required.
  Visual Studio 6 will require WINVER to be set for Win95 or Win98.

* Added the titlbar sample.
  This sample demonstrates how to customize a windows title bar. It sets
  the title bar's color and draws the minimize, maximize and close buttons.
  It uses CMenuBar to display a menu in the title bar.

* Added the titlebar frame sample.
  This sample demonstrates how to use a customized title bar with a frame.
  It demonstrates the frame in two modes: mini-frame and full-frame.

* Added the PrintDialogEx sample.
  This sample upgrades the Notepad sample. The Notepad sample used CPrintDialog
  to display the print dialog. This sample demonstrates the use of 
  CPrintDialogEx to display the print dialog. It supports printing individual
  pages, as well as multiple page ranges. It also supports printing multiple
  copies, with or without collating. A footer displaying the page number is
  added to the bottom of the printed page.


Changes in Detail
-----------------
Renamed UWM_PRINTNOW   to UWM_PREVIEWPRINT
Renamed UWM_PRINTSETUP to UWM_PREVIEWSETUP



Version 8.9.1
=============

New Features and Enhancements
-----------------------------
* Added CPrintDialogEx.
  - The CPrintDialogEx class uses PrintDlgEx to display a property sheet
    which allows the user to select the printer to use.
    Requires Windows 2000 or newer ( WINVER >= 0500 ).

* Updated CMenuBar.
  - CMenuBar now emulates the behavior of a traditional menu more closely.
  - The accelerator prefixes are now normally hidden, but are displayed for
    keyboard navigation.

 * Updated CDC.
  - A CDC restores its device context to its original state when its last